gave the a selector a relative position & a z-index. Adding this fixed the problem I was having, as the links became unclickable when the background-image url was added in my style.css file. Now it works

--- a/style.css
+++ b/style.css
@@ -33,7 +33,12 @@ span, .yellow{
     margin-top: 60px;
 }
 
-.bc::before{
+a{
+    position: relative;
+    z-index: 1;
+}
+
+.bc:before{
     content: "";
     background-image: url(https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg);
     background-size:cover;
